Pushing final changes for benchmarking